--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,34 +34,27 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, tag, and push Flask app image to Amazon ECR
         env:
           ECR_REGISTRY: 104387388648.dkr.ecr.us-east-1.amazonaws.com
           ECR_REPOSITORY: my-app
           IMAGE_TAG: latest
         run: |
           # Build the Docker image
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile .
 
           # Push the Docker image to ECR
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
-      - name: Install dependencies
+      - name: Build, tag, and push MySQL image to Amazon ECR
+        env:
+          ECR_REGISTRY: 104387388648.dkr.ecr.us-east-1.amazonaws.com
+          ECR_REPOSITORY: mysql-app
+          IMAGE_TAG: latest
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # Build the Docker image
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile_mysql .
 
-      - name: Run unit tests
-        run: |
-          python -m unittest discover -s tests
-
-      - name: Publish to ECR only if tests pass
-        if: success()
-        run: |
+          # Push the Docker image to ECR
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
