--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build, tag, and push MySQL image to Amazon ECR
         env:
           ECR_REGISTRY: 104387388648.dkr.ecr.us-east-1.amazonaws.com
-          ECR_REPOSITORY: mysql-app
+          ECR_REPOSITORY: mysql-repo
           IMAGE_TAG: latest
         run: |
           # Build the Docker image
